parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> assignment
Rule 1     assignment -> VARIABLE SETTO expression
Rule 2     assignment -> VARIABLE SETTO list
Rule 3     assignment -> VARIABLE SETTO flow
Rule 4     flow -> VARIABLE CONNECT flow_functions
Rule 5     flow_functions -> flow_function_call CONNECT flow_functions
Rule 6     flow_functions -> flow_function_call
Rule 7     flow_function_call -> VARIABLE LPAREN params RPAREN
Rule 8     assignment -> expression
Rule 9     expression -> expression PLUS term
Rule 10    expression -> expression MINUS term
Rule 11    expression -> term
Rule 12    expression -> string
Rule 13    string -> STRING
Rule 14    term -> term TIMES exponent
Rule 15    term -> term DIVIDE exponent
Rule 16    term -> exponent
Rule 17    exponent -> factor EXP factor
Rule 18    exponent -> factor
Rule 19    exponent -> LPAREN expression RPAREN
Rule 20    factor -> NUMBER
Rule 21    factor -> VARIABLE
Rule 22    factor -> function_call
Rule 23    function_call -> VARIABLE LPAREN RPAREN
Rule 24    function_call -> VARIABLE LPAREN params RPAREN
Rule 25    params -> params COMMA expression
Rule 26    params -> expression
Rule 27    list -> LBRACKET contents RBRACKET
Rule 28    contents -> contents COMMA content
Rule 29    contents -> content
Rule 30    content -> expression
Rule 31    content -> list
Rule 32    list -> LBRACKET RBRACKET
Rule 33    expression -> VARIABLE LBRACKET subscript RBRACKET
Rule 34    subscript -> NUMBER
Rule 35    expression -> VARIABLE LBRACKET subscript RBRACKET SETTO expression
Rule 36    expression -> VARIABLE LBRACKET expression COLON expression RBRACKET

Terminals, with rules where they appear

COMMA                : 28 36
CONNECT              : 8 9
DIVIDE               : 19
DOT                  : 11 27
EXP                  : 21
LBRACE               : 31
LPAREN               : 11 23 27 31
MINUS                : 14
NUMBER               : 24
PLUS                 : 13
RBRACE               : 31
RPAREN               : 11 23 27 31
SETTO                : 6 7
STRING               : 17
TIMES                : 18
VARIABLE             : 6 7 8 11 25 27 31 36 37
error                : 

Nonterminals, with rules where they appear

assignment           : 0
content              : 28 29
contents             : 27 28
exponent             : 14 15 16
expression           : 1 8 9 10 19 25 26 30 35 36 36
factor               : 17 17 18
flow                 : 3
flow_function_call   : 5 6
flow_functions       : 4 5
function_call        : 22
list                 : 2 31
params               : 7 24 25
string               : 12
subscript            : 33 35
term                 : 9 10 11 14 15

Parsing method: LALR

state 0

    (0) S' -> . assignment
    (1) assignment -> . VARIABLE SETTO expression
    (2) assignment -> . VARIABLE SETTO list
    (3) assignment -> . VARIABLE SETTO flow
    (8) assignment -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) expression -> . string
    (33) expression -> . VARIABLE LBRACKET subscript RBRACKET
    (35) expression -> . VARIABLE LBRACKET subscript RBRACKET SETTO expression
    (36) expression -> . VARIABLE LBRACKET expression COLON expression RBRACKET
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (13) string -> . STRING
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    VARIABLE        shift and go to state 2
    STRING          shift and go to state 7
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10

    assignment                     shift and go to state 1
    expression                     shift and go to state 3
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 1

    (0) S' -> assignment .



state 2

    (1) assignment -> VARIABLE . SETTO expression
    (2) assignment -> VARIABLE . SETTO list
    (3) assignment -> VARIABLE . SETTO flow
    (33) expression -> VARIABLE . LBRACKET subscript RBRACKET
    (35) expression -> VARIABLE . LBRACKET subscript RBRACKET SETTO expression
    (36) expression -> VARIABLE . LBRACKET expression COLON expression RBRACKET
    (21) factor -> VARIABLE .
    (23) function_call -> VARIABLE . LPAREN RPAREN
    (24) function_call -> VARIABLE . LPAREN params RPAREN

    SETTO           shift and go to state 12
    LBRACKET        shift and go to state 13
    EXP             reduce using rule 21 (factor -> VARIABLE .)
    TIMES           reduce using rule 21 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 21 (factor -> VARIABLE .)
    PLUS            reduce using rule 21 (factor -> VARIABLE .)
    MINUS           reduce using rule 21 (factor -> VARIABLE .)
    $end            reduce using rule 21 (factor -> VARIABLE .)
    LPAREN          shift and go to state 14


state 3

    (8) assignment -> expression .
    (9) expression -> expression . PLUS term
    (10) expression -> expression . MINUS term

    $end            reduce using rule 8 (assignment -> expression .)
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16


state 4

    (11) expression -> term .
    (14) term -> term . TIMES exponent
    (15) term -> term . DIVIDE exponent

    PLUS            reduce using rule 11 (expression -> term .)
    MINUS           reduce using rule 11 (expression -> term .)
    $end            reduce using rule 11 (expression -> term .)
    RPAREN          reduce using rule 11 (expression -> term .)
    COLON           reduce using rule 11 (expression -> term .)
    COMMA           reduce using rule 11 (expression -> term .)
    RBRACKET        reduce using rule 11 (expression -> term .)
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18


state 5

    (12) expression -> string .

    PLUS            reduce using rule 12 (expression -> string .)
    MINUS           reduce using rule 12 (expression -> string .)
    $end            reduce using rule 12 (expression -> string .)
    RPAREN          reduce using rule 12 (expression -> string .)
    COLON           reduce using rule 12 (expression -> string .)
    COMMA           reduce using rule 12 (expression -> string .)
    RBRACKET        reduce using rule 12 (expression -> string .)


state 6

    (16) term -> exponent .

    TIMES           reduce using rule 16 (term -> exponent .)
    DIVIDE          reduce using rule 16 (term -> exponent .)
    PLUS            reduce using rule 16 (term -> exponent .)
    MINUS           reduce using rule 16 (term -> exponent .)
    $end            reduce using rule 16 (term -> exponent .)
    RPAREN          reduce using rule 16 (term -> exponent .)
    COLON           reduce using rule 16 (term -> exponent .)
    COMMA           reduce using rule 16 (term -> exponent .)
    RBRACKET        reduce using rule 16 (term -> exponent .)


state 7

    (13) string -> STRING .

    PLUS            reduce using rule 13 (string -> STRING .)
    MINUS           reduce using rule 13 (string -> STRING .)
    $end            reduce using rule 13 (string -> STRING .)
    RPAREN          reduce using rule 13 (string -> STRING .)
    COLON           reduce using rule 13 (string -> STRING .)
    COMMA           reduce using rule 13 (string -> STRING .)
    RBRACKET        reduce using rule 13 (string -> STRING .)


state 8

    (17) exponent -> factor . EXP factor
    (18) exponent -> factor .

    EXP             shift and go to state 19
    TIMES           reduce using rule 18 (exponent -> factor .)
    DIVIDE          reduce using rule 18 (exponent -> factor .)
    PLUS            reduce using rule 18 (exponent -> factor .)
    MINUS           reduce using rule 18 (exponent -> factor .)
    $end            reduce using rule 18 (exponent -> factor .)
    RPAREN          reduce using rule 18 (exponent -> factor .)
    COLON           reduce using rule 18 (exponent -> factor .)
    COMMA           reduce using rule 18 (exponent -> factor .)
    RBRACKET        reduce using rule 18 (exponent -> factor .)


state 9

    (19) exponent -> LPAREN . expression RPAREN
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) expression -> . string
    (33) expression -> . VARIABLE LBRACKET subscript RBRACKET
    (35) expression -> . VARIABLE LBRACKET subscript RBRACKET SETTO expression
    (36) expression -> . VARIABLE LBRACKET expression COLON expression RBRACKET
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (13) string -> . STRING
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    VARIABLE        shift and go to state 21
    STRING          shift and go to state 7
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10

    expression                     shift and go to state 20
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 10

    (20) factor -> NUMBER .

    EXP             reduce using rule 20 (factor -> NUMBER .)
    TIMES           reduce using rule 20 (factor -> NUMBER .)
    DIVIDE          reduce using rule 20 (factor -> NUMBER .)
    PLUS            reduce using rule 20 (factor -> NUMBER .)
    MINUS           reduce using rule 20 (factor -> NUMBER .)
    $end            reduce using rule 20 (factor -> NUMBER .)
    RPAREN          reduce using rule 20 (factor -> NUMBER .)
    COMMA           reduce using rule 20 (factor -> NUMBER .)
    COLON           reduce using rule 20 (factor -> NUMBER .)
    RBRACKET        reduce using rule 20 (factor -> NUMBER .)


state 11

    (22) factor -> function_call .

    EXP             reduce using rule 22 (factor -> function_call .)
    TIMES           reduce using rule 22 (factor -> function_call .)
    DIVIDE          reduce using rule 22 (factor -> function_call .)
    PLUS            reduce using rule 22 (factor -> function_call .)
    MINUS           reduce using rule 22 (factor -> function_call .)
    $end            reduce using rule 22 (factor -> function_call .)
    RPAREN          reduce using rule 22 (factor -> function_call .)
    COLON           reduce using rule 22 (factor -> function_call .)
    COMMA           reduce using rule 22 (factor -> function_call .)
    RBRACKET        reduce using rule 22 (factor -> function_call .)


state 12

    (1) assignment -> VARIABLE SETTO . expression
    (2) assignment -> VARIABLE SETTO . list
    (3) assignment -> VARIABLE SETTO . flow
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) expression -> . string
    (33) expression -> . VARIABLE LBRACKET subscript RBRACKET
    (35) expression -> . VARIABLE LBRACKET subscript RBRACKET SETTO expression
    (36) expression -> . VARIABLE LBRACKET expression COLON expression RBRACKET
    (27) list -> . LBRACKET contents RBRACKET
    (32) list -> . LBRACKET RBRACKET
    (4) flow -> . VARIABLE CONNECT flow_functions
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (13) string -> . STRING
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    VARIABLE        shift and go to state 22
    LBRACKET        shift and go to state 26
    STRING          shift and go to state 7
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10

    expression                     shift and go to state 23
    list                           shift and go to state 24
    flow                           shift and go to state 25
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 13

    (33) expression -> VARIABLE LBRACKET . subscript RBRACKET
    (35) expression -> VARIABLE LBRACKET . subscript RBRACKET SETTO expression
    (36) expression -> VARIABLE LBRACKET . expression COLON expression RBRACKET
    (34) subscript -> . NUMBER
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) expression -> . string
    (33) expression -> . VARIABLE LBRACKET subscript RBRACKET
    (35) expression -> . VARIABLE LBRACKET subscript RBRACKET SETTO expression
    (36) expression -> . VARIABLE LBRACKET expression COLON expression RBRACKET
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (13) string -> . STRING
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    NUMBER          shift and go to state 29
    VARIABLE        shift and go to state 21
    STRING          shift and go to state 7
    LPAREN          shift and go to state 9

    subscript                      shift and go to state 27
    expression                     shift and go to state 28
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 14

    (23) function_call -> VARIABLE LPAREN . RPAREN
    (24) function_call -> VARIABLE LPAREN . params RPAREN
    (25) params -> . params COMMA expression
    (26) params -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) expression -> . string
    (33) expression -> . VARIABLE LBRACKET subscript RBRACKET
    (35) expression -> . VARIABLE LBRACKET subscript RBRACKET SETTO expression
    (36) expression -> . VARIABLE LBRACKET expression COLON expression RBRACKET
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (13) string -> . STRING
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    RPAREN          shift and go to state 30
    VARIABLE        shift and go to state 21
    STRING          shift and go to state 7
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10

    params                         shift and go to state 31
    expression                     shift and go to state 32
    term                           shift and go to state 4
    string                         shift and go to state 5
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 15

    (9) expression -> expression PLUS . term
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 34

    term                           shift and go to state 33
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 16

    (10) expression -> expression MINUS . term
    (14) term -> . term TIMES exponent
    (15) term -> . term DIVIDE exponent
    (16) term -> . exponent
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 34

    term                           shift and go to state 35
    exponent                       shift and go to state 6
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 17

    (14) term -> term TIMES . exponent
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 34

    exponent                       shift and go to state 36
    factor                         shift and go to state 8
    function_call                  shift and go to state 11

state 18

    (15) term -> term DIVIDE . exponent
    (17) exponent -> . factor EXP factor
    (18) exponent -> . factor
    (19) exponent -> . LPAREN expression RPAREN
    (20) factor -> . NUMBER
    (21) factor -> . VARIABLE
    (22) factor -> . function_call
    (23) function_call -> . VARIABLE LPAREN RPAREN
    (24) function_call -> . VARIABLE LPAREN params RPAREN

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 34
